--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Assignment07"
+name = "BISC195Bioinformatics"
 uuid = "67893044-1481-44cf-8ab6-de350e09ee4e"
 authors = ["Kevin Bonham, PhD <kbonham@wellesley.edu>", "Jessica Maciuch, The Magnificent"]
 version = "0.1.0"
