--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Kevin Bonham, PhD <kbonham@wellesley.edu>", "Jessica Maciuch, The Ma
 version = "0.1.0"
 
 [deps]
+BioAlignments = "00701ae9-d1dc-5365-b64a-a3a3ebf5695e"
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
